--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/educational-db
+spring.datasource.url=jdbc:postgresql://localhost:5432/educationaldb
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.password=1234
-spring.datasource.username=postgres
+spring.datasource.password=eDu8asd4ASdkn5qyAsfeasf45a
+spring.datasource.username=sebastian
 server.address=0.0.0.0
 server.port=8080
 spring.servlet.multipart.max-file-size=100MB
